# typing-arguments

./: .gitignore  LICENSE  README.md  justfile  pkg-version.py  pyproject.toml  tox.ini
.github/workflows/: lint.yml  release.yml  test.yml
tests/: test_generic_arguments.py
typing_arguments/: __init__.py  generic_arguments.py
