[project]
name = "typing-arguments"
version = "0.2.1"
description = "Store references of your typing arguments to be available at runtime."
readme = "README.md"
authors = [{ name = "TEAM23 GmbH", email = "info@team23.de" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/team23/typing-arguments"

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pydantic>=2.11.10",
    "pyright>=v1.1.406",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "tomlkit>=0.13.3",
    "tox>=4.30.3",
]

[tool.ruff]
line-length = 115
target-version = "py310"
output-format = "grouped"

[tool.ruff.lint]
select = ["F","E","W","C","I","N","UP","ANN","S","B","A","COM","C4","T20","PT","ARG","TD","RUF"]
ignore = ["A001","A002","A003","ANN401","C901","N8","B008","F405","F821"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"conftest.py" = ["S101","ANN","F401"]
"test_*.py" = ["S101","ANN","F401"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "typing_arguments"
module-root = ""
